# wordle_hack

./: README.md  pyproject.toml
data/: excluded.txt  make_thesaurus.sh  words5_small.txt
src/: optimal_player.py
src/tests/: test_optimal_player.py
src/wordle_hack/: wordle_hack.py
tests/: test_optimal_player.py
