[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordle_hack"
dynamic = ["version"]
description = 'A tool to solve Wordle puzzles in an optimal way'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Askar Gafurov", email = "askar.gafurov@fmph.uniba.sk" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "argh",
  "tqdm",
]

[project.urls]
Documentation = "https://github.com/japdlsd/wordle_hack#readme"
Issues = "https://github.com/japdlsd/wordle_hack/issues"
Source = "https://github.com/japdlsd/wordle_hack"

[tool.hatch.version]
path = "src/wordle_hack/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wordle_hack tests}"

[tool.coverage.run]
source_pkgs = ["wordle_hack", "tests"]
branch = true
parallel = true
omit = [
  "src/wordle_hack/__about__.py",
]

[tool.coverage.paths]
posom = ["src/wordle_hack", "*/wordle_hack/src/wordle_hack"]
tests = ["tests", "*/wordle_hack/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
wordle = "wordle_hack.wordle_hack:main"